infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prisma
  labels:
    name: prisma
